# motion-detection

./: .gitignore  CMakeLists.txt  main.cpp  roc_visualization.ipynb  roc_visualization.py  utils.cpp  utils.h
